ResourceItem fix alignment of checkbox when no media (#3080)
* ResourceItem fix alignment of checkbox when no media

--- a/src/components/ResourceItem/ResourceItem.scss
+++ b/src/components/ResourceItem/ResourceItem.scss
@@ -205,6 +205,10 @@ $resource-list-item-variables: (
   display: flex;
 }
 
+.OwnedNoMedia {
+  padding-top: spacing(extra-tight);
+}
+
 // Item handle
 .Handle {
   width: resource-list-item(handle-width);
